src/style.css
.App {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background: #F4F2C3;
    background: radial-gradient(at center, #F4F2C3, #DAFFFF);
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.grocery-buddy {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    max-width: 600px;
    padding: 2rem;
    background-color: #FFF;
    border-radius: 20px;
    box-shadow: 0 16px 16px rgba(105, 101, 101, 0.3);
}

h1 {
    margin-bottom: 3rem;
}

.input-section {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    border: 0px;
    border-style: none;
}

.input-container {
    display: flex;
    justify-content: space-between;
    border: 0px;
    border-style: none;
}

input {
    background: #EFF2F1;
    flex-grow: 1;
    padding: 0.8rem;
    border-radius: 6px;
    border: none;
    outline: none;
}

button {
    margin-left: 1rem;
    padding: 0.5rem 1rem;

    color: #ffffff;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

.grocery-list {
    width: 100%;
    list-style-type: none;
    padding: 0;
}

.grocery-list li {
    /* padding: 0.5rem; */
    border-bottom: 1px solid #cccccc;
    justify-content: space-between;
    display: flex;
    align-items: center;
    font-weight: bold;
    font-size: larger;
}

.grocery-list li:last-child {
    border-bottom: none;
}

.btn-add {
    background-color: #1C7C54;
    color: white;
    padding: 8px 20px;
    margin-left: 16px;
}

.btn-edit {
    background-color: #D58936;
}

.btn-delete {
    background-color: #D52941;
    padding: 8px 20px;
}

.btn-clear {
    border: 2px solid black;
    background-color: white;
    color: black;
    font-size: 16px;
    cursor: pointer;
    border-color: #f44336;
    color: red;
}

.btn-clear:hover {
    background: #f44336;
    color: white;
}

.errors {
    color: red;
    font-size: 14px;
}

